--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ commands:
       - run:
           name: Build 4 images in this project
           command: |
-            docker build -t udagram-api-feed .././udagram-api-feed
-            docker build -t udagram-frontend .././udagram-frontend
-            docker build -t udagram-api-user .././udagram-api-user
-            docker build -t reverseproxy .././udagram-reverseproxy
+            docker build -t udagram-api-feed ./udagram-api-feed
+            docker build -t udagram-frontend ./udagram-frontend
+            docker build -t udagram-api-user ./udagram-api-user
+            docker build -t reverseproxy ./udagram-reverseproxy
   tag:
     description: Tag images
     steps:
