--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ commands:
       - run:
           name: Build 4 images in this project
           command: |
+            pwd
             docker build -t udagram-api-feed ./udagram-api-feed
             docker build -t udagram-frontend ./udagram-frontend
             docker build -t udagram-api-user ./udagram-api-user
