--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ commands:
 jobs:
   all:
     docker:
-      - image: moregreenhouse/tm-base
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - install
