change docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ commands:
 jobs:
   all:
     docker:
-      - image: ubuntu-2004:202201-02
+      - image: ubuntu
     steps:
       - checkout
       - login
