--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,15 @@ commands:
       - run:
           name: Print message
           command: |
-            echo "nothing needs to be installed"
+            apt-get update
+            apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            add-apt-repository \
+            "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+            $(lsb_release -cs) \
+            stable"
+            apt-get update
+            apt-get install docker-ce docker-ce-cli containerd.io
   build:
     description: Build docker images
     steps:
@@ -57,8 +65,8 @@ jobs:
       - image: ubuntu
     steps:
       - checkout
-      - login
       - install
+      - login
       - build
       - tag
       - push
