change docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,17 +5,9 @@ commands:
     description: Echo message
     steps:
       - run:
-          name: Print message
+          name: Install
           command: |
-            apt-get update
-            apt-get -y install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-            add-apt-repository \
-            "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-            $(lsb_release -cs) \
-            stable"
-            apt-get update
-            apt-get -y install docker-ce docker-ce-cli containerd.io
+              "Install something..."
   build:
     description: Build docker images
     steps:
@@ -62,7 +54,7 @@ commands:
 jobs:
   all:
     docker:
-      - image: ubuntu
+      - image: cimg/base:2022.09
     steps:
       - checkout
       - install
