--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ commands:
 jobs:
   all:
     docker:
-      - image: cimg/base:2022.09
+      - image: node:13
     steps:
       - checkout
       - install
