--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - login
   build:
     docker:
-      - image: cimg/python:3.11.4
+      - image: cimg/base:2023.09
     steps:
       - checkout
       - build
