--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ commands:
       - run:
           name: Install
           command: |
-              echo "Install something..."
+              curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+              chmod +x ~/docker-compose
+              sudo mv ~/docker-compose /usr/local/bin/docker-compose
   build:
     description: Build docker images
     steps:
@@ -16,10 +18,12 @@ commands:
           command: |
             sudo dockerd
             # systemctl start docker
-            docker build -t udagram-api-feed ./udagram-api-feed
-            docker build -t udagram-frontend ./udagram-frontend
-            docker build -t udagram-api-user ./udagram-api-user
-            docker build -t reverseproxy ./udagram-reverseproxy
+            docker-compose -f docker-compose-build.yaml build --parallel
+            docker-compose up
+            # docker build -t udagram-api-feed ./udagram-api-feed
+            # docker build -t udagram-frontend ./udagram-frontend
+            # docker build -t udagram-api-user ./udagram-api-user
+            # docker build -t reverseproxy ./udagram-reverseproxy
   tag:
     description: Tag images
     steps:
@@ -57,6 +61,7 @@ jobs:
     steps:
       - checkout
       - install
+      - setup_remote_docker
   login:
     docker:
       - image: cimg/python:3.11.4
