--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ commands:
             # sudo dockerd
             # systemctl start docker
             docker-compose -f docker-compose-build.yaml build --parallel
-            docker-compose up
+            # docker-compose up
             # docker build -t udagram-api-feed ./udagram-api-feed
             # docker build -t udagram-frontend ./udagram-frontend
             # docker build -t udagram-api-user ./udagram-api-user
