tag in tag step, i'm wrong

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
       - image: cimg/python:3.11.4
     steps:
       - checkout
-      - build
+      - tag
   push:
     docker:
       - image: cimg/python:3.11.4
