--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,30 +10,6 @@ commands:
               curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
               chmod +x ~/docker-compose
               sudo mv ~/docker-compose /usr/local/bin/docker-compose
-  build:
-    description: Build docker images
-    steps:
-      - run:
-          name: Build 4 images in this project
-          command: |
-            # sudo dockerd
-            # systemctl start docker
-            docker-compose -f docker-compose-build.yaml build --parallel
-            # docker-compose up
-            # docker build -t udagram-api-feed ./udagram-api-feed
-            # docker build -t udagram-frontend ./udagram-frontend
-            # docker build -t udagram-api-user ./udagram-api-user
-            # docker build -t reverseproxy ./udagram-reverseproxy
-  tag:
-    description: Tag images
-    steps:
-      - run:
-          name: Tag 4 images being built in previous step
-          command: |
-            docker tag udagram-api-feed theblackdang/udagram-api-feed:udacity
-            docker tag udagram-frontend theblackdang/udagram-frontend:udacity
-            docker tag udagram-api-user theblackdang/udagram-api-user:udacity
-            docker tag reverseproxy theblackdang/reverseproxy:udacity
   login:
     description: Login
     steps:
@@ -41,17 +17,21 @@ commands:
           name: Login as theblackdang
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
-  push:
-    description:  Push images
+  buildtagpush:
+    description: Build, tag and push images
     steps:
       - run:
-          name: Push 4 images
+          name: Build, tag and push 4 images in this project
           command: |
-            docker push theblackdang/udagram-api-feed:$TAG
-            docker push theblackdang/udagram-frontend:$TAG
-            docker push theblackdang/udagram-api-user:$TAG
-            docker push theblackdang/reverseproxy:$TAG
+            docker-compose -f docker-compose-build.yaml build --parallel
+            docker tag udagram-api-feed theblackdang/udagram-api-feed:udacity
+            docker tag udagram-frontend theblackdang/udagram-frontend:udacity
+            docker tag udagram-api-user theblackdang/udagram-api-user:udacity
+            docker tag reverseproxy theblackdang/reverseproxy:udacity
+            docker push theblackdang/udagram-api-feed:udacity
+            docker push theblackdang/udagram-frontend:udacity
+            docker push theblackdang/udagram-api-user:udacity
+            docker push theblackdang/reverseproxy:udacity
 
 jobs:
   install:
@@ -66,25 +46,13 @@ jobs:
     steps:
       - checkout
       - login
-  build:
+  buildtagpush:
     docker:
       - image: cimg/base:stable
     steps:
       - checkout
       - setup_remote_docker
-      - build
-  tag:
-    docker:
-      - image: cimg/python:3.11.4
-    steps:
-      - checkout
-      - tag
-  push:
-    docker:
-      - image: cimg/python:3.11.4
-    steps:
-      - checkout
-      - push
+      - buildtagpush
 
 workflows:
   default:
@@ -92,10 +60,5 @@ workflows:
       - install
       - login:
           requires: [install]
-      - build:
+      - buildtagpush:
           requires: [login]
-      - tag:
-          requires: [build]
-      - push:
-          requires: [tag]
-      
