package json changes

--- a/udagram-frontend/tsconfig.json
+++ b/udagram-frontend/tsconfig.json
@@ -20,6 +20,10 @@
     ],
     "skipLibCheck": true
   },
+  "angularCompilerOptions": {
+    // ...
+    "disableTypeScriptVersionCheck": true
+  },
   "exclude": [
     "node_modules",
     "typings"
