--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -52,10 +52,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~10.9.1",
     "tslint": "~5.20.1",
-    "typescript": "^5.2.2"
+    "typescript": "^4.3.5"
   },
   "description": "An Ionic project"
 }
