--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ commands:
       - run:
           name: Build, tag and push 4 images in this project
           command: |
+            bash set_env.sh
             docker-compose -f docker-compose-build.yaml build --parallel
             docker tag udagram-api-feed theblackdang/udagram-api-feed:udacity
             docker tag udagram-frontend theblackdang/udagram-frontend:udacity
