--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
       - run:
           name: Build, tag and push 4 images in this project
           command: |
-            bash set_env.sh
+            source set_env.sh
             docker-compose config
             docker-compose -f docker-compose-build.yaml build --parallel
             docker tag udagram-api-feed theblackdang/udagram-api-feed:udacity
