--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
       AWS_PROFILE: $AWS_PROFILE 
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
-      URL: "postgres.cw9a3mp3kerk.us-east-1.rds.amazonaws.com"
+      URL: "http://aa5f268da1a424872a12d8cd06c041de-1570222605.us-east-1.elb.amazonaws.com:8100"
   backend-feed:
     image: udagram-api-feed:latest
     volumes:
@@ -33,7 +33,7 @@ services:
       AWS_PROFILE: $AWS_PROFILE 
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
-      URL: "postgres.cw9a3mp3kerk.us-east-1.rds.amazonaws.com"
+      URL: "http://aa5f268da1a424872a12d8cd06c041de-1570222605.us-east-1.elb.amazonaws.com:8100"
   frontend:
     image: udagram-frontend:latest
     ports:
