hard coded host in sequelize.ts files

--- a/aws/backend-feed-deployment.yaml
+++ b/aws/backend-feed-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-feed
-          image: theblackdang/udagram-api-feed:udacity
+          image: theblackdang/udagram-api-feed:udagram-api-feed
           ports:
             - containerPort: 80
           resources:
