--- a/aws/backend-user-deployment.yaml
+++ b/aws/backend-user-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-user
-          image: theblackdang/udagram-api-user:udacity
+          image: theblackdang/udagram-api-user:udagram-api-user
           ports:
             - containerPort: 80
           resources:
